# BDD_UC

./: .gitignore  pyproject.toml  readme.md  scrapy.cfg
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
dockerfiles/: docker-compose.dev.yml  docker-compose.prod.yml
dockerfiles/services/api/: Dockerfile.dev  Dockerfile.prod
dockerfiles/services/docs/: Dockerfile.dev
dockerfiles/services/server/: Dockerfile.prod
src/: banners_info.py  config.py
src/api/: main.py  routes.py
src/db/: __init__.py  database_services.py  models.py
src/scraper/: items.py  pipelines.py  settings.py  utils.py
src/scraper/spiders/: coursevacancy.py  generalbuscacursos.py
